tests/errors/syn_if4.java
public class syn_if4{
public static void main(String[] args){
 if ( true { }
}
}